fixed spacing at top

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,7 +40,7 @@ h1, h2, h3, h4, .title-font{
 main{
 	width: min(95%, 480px);
 	margin: 0 auto;
-	padding: 3rem 0;
+	padding: 1rem 0;
 }
 
 .big-btn{
@@ -78,4 +78,5 @@ img{
 	font-size: 3rem;
 	text-align: center;
 	margin-bottom: 10px;
+	margin-top: 0;
 }
